Fix scrolling on mobile; Don't use Object.groupBy() as it's not available in Samsung Internet yet

--- a/Servel.NET/Assets/css/common.css
+++ b/Servel.NET/Assets/css/common.css
@@ -10,7 +10,6 @@ body {
   min-height: 100vh;
   font-size: 16px;
   user-select: none;
-  touch-action: none;
 }
 
 .default-hidden {
